# build-scale-generative-ai-applications-with-amazon-bedrock-workshop

./: .gitignore  README.md
lab1/: ML-blog.txt  bank-call-centre-transcript.txt  sample-questions.txt
lab2/: .gitignore  .pre-commit-config.yaml  README.md  app.py  cdk.json  config.yml  pyproject.toml  resize.sh  run.sh
lab2/assets/lambda/db_connections/prompt_lambda/: prompt_lambda.py
lab2/assets/lambda/genai/bedrock_content_generation_lambda/: bedrock_content_generation_lambda.py
lab2/assets/lambda/genai/bedrock_content_generation_lambda/model_configs/: amazon.titan-text-express-v1.json  anthropic.claude-3-sonnet-20240229-v1.json
lab2/assets/lambda/sns_topic_lambda/: sns_topic_lambda.py
lab2/assets/layers/: dummy.txt
lab2/assets/streamlit/: .env  Dockerfile  build_docker.sh  pyproject.toml
lab2/assets/streamlit/.streamlit/: config.toml  pages.toml
lab2/assets/streamlit/src/: Home.py
lab2/assets/streamlit/src/app_pages/: BuildPromptTemplate.py  CustomerList.py  DataViewer.py  EmailGenerationWizard.py  PromptCatalog.py  PromptEngineer.py
lab2/assets/streamlit/src/components/: authenticate.py  bedrock_model_specs.json  genai_api.py  sm_endpoints_model_specs.json  sns_api.py  utils.py  utils_models.py
lab2/assets/streamlit/src/data/: Customers.csv  customer_variables.txt  df_item_banking.csv  df_segment_data.csv  products.json
lab2/infra/: bdrk_reinvent_stack.py
lab2/infra/constructs/: bdrk_reinvent_api.py  bdrk_reinvent_layers.py
lab2/infra/stacks/: bdrk_reinvent_streamlit.py
